--- a/user/css/index.css
+++ b/user/css/index.css
@@ -217,9 +217,9 @@ header {
     gap: 1.5rem;
     padding: 2rem 1rem;
   }
-  @media (max-width: 2000px){
+  @media (min-width: 2000px){
     .card-shoe-new{
-      gap:4rem;
+      gap:2rem;
     }
   }
 
