Enhance .card-shoe-new styles for larger screens
Add media query for .card-shoe-new class.

--- a/user/css/index.css
+++ b/user/css/index.css
@@ -217,6 +217,11 @@ header {
     gap: 1.5rem;
     padding: 2rem 1rem;
   }
+  
+@media(min-width:1600px){
+.card-shoe-new{
+  gap: 2rem;
+}
 
 
   .footer-links,
