--- a/user/css/index.css
+++ b/user/css/index.css
@@ -237,8 +237,8 @@ header {
   }
 }
 @media(min-width:1600px){
-.card{
-  margin-right: 0.5rem;
+.card-shoe-new,.card-shoe-hot{
+  gap: 1.5rem;
 }
 }
 .card-shoes {
